# multicolor

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
core/: Cargo.toml  Info.plist  tauri.conf.json
core/icons/: icon.icns
core/src/: main.rs
src/: App.css  App.tsx
src/components/: ColorDetail.css  ColorDetail.tsx  ColorPalette.css  ColorPalette.tsx
src/util/: Color.ts
